assets/scss/organisms/_services-block.scss
@use '@/assets/scss/abstracts/' as *;

.services-block {
    align-items: center;
    overflow: hidden;

    @include breakpoint(md) {
        column-gap: fluid(2, 4, false);
        grid-template-columns: repeat(2, 1fr);
        row-gap: fluid(1.5, 2.5, false);

        > *:first-child {
            grid-column: 2;
        }
    }

    &__header {
        display: grid;
        gap: fluid(1, 2, false);

        @include breakpoint(md) {
            grid-row: 1 / span 1;
            place-content: end;
            place-items: end;
        }
    }
    &__heading {

        @include breakpoint(md) {
            --text-align: end;
        }
    }

    &__text {
        color: var(--section-color-text);
        font-size: fluid(0.75, 1.125, false);
        font-weight: var(--font-weight-regular);
        line-height: 1.6;
        max-inline-size: var(--size-content-2);
    }

    &__grid {
        --_grid-min: 12rem;
        align-content: start;
        display: grid;
        gap: fluid(3, 4, false) fluid(1.5, 2.5, false);
        grid-template-columns: repeat(auto-fit, minmax(var(--_grid-min), 1fr));
        justify-content: start;

        @include breakpoint(md) {
            align-content: center;
            grid-row: 1 / span 1;
            justify-content: center;
        }

        @include breakpoint(xl) {
            --_grid-min: 15rem;
        }
    }

    &__item {
        @include icon-shades();
        align-items: center;
        display: grid;
        grid-template-areas: 'ICON TEXT';
        grid-template-columns: max-content auto;
        gap: fluid(1.25, 1.75, false);
        justify-content: start;

        @include breakpoint(md) {
            align-items: end;
            grid-template-areas: 'ICON' 'TEXT';
            grid-template-columns: auto;
            justify-content: center;
        }
    }

    &__icon {
        --icon-padding: #{fluid(0.75, 1.25, false)};
        --icon-size: #{fluid(2, 3, false)};
        aspect-ratio: 1;
        display: grid;
        grid-area: ICON;
        grid-template-columns: var(--icon-padding) var(--icon-size) var(--icon-padding);
        grid-template-rows: var(--icon-padding) var(--icon-size) var(--icon-padding);
        place-content: center;
        place-items: center;

        svg {
            @include image-fit('contain');
            grid-column: 2 / span 1;
            grid-row: 2 / span 1;
            z-index: 1;
        }
    }

    &__icon-frame {
        background: var(--c-neutral-0);
        block-size: 100%;
        border: 1px solid var(--c-theme-200);
        border-radius: 0.5rem;
        grid-column: 1 / -1;
        grid-row: 1 / -1;
        inline-size: 100%;
        //rotate: 25deg;
        z-index: 0;
    }

    &__label {
        color: var(--section-color-accent);
        font-size: fluid(0.75, 1, false);
        font-weight: var(--font-weight-medium);
        grid-area: TEXT;
        letter-spacing: 0.1em;
        text-align: left;
        text-transform: uppercase;

        @include breakpoint(md) {
            text-align: center;
        }
    }
}

